// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderFurniture reactive glyphs (active variant) > dryer idle markup is pinned 1`] = `
"<g transform="translate(120 80) rotate(0)"><rect x=-30 y=-30 width=60 height=60 rx="4"
                  fill=#9e9e9e fill-opacity=0.12 stroke=#9e9e9e stroke-width="2" />
        <line x1=-26.4 y1=-19.200000000000003 x2=26.4 y2=-19.200000000000003
              stroke=#9e9e9e stroke-width="1.5" opacity="0.7" />
        <circle cx="0" cy=3.5999999999999996 r=18 fill="none" stroke=#9e9e9e stroke-width="2" />
        <circle cx="0" cy=3.5999999999999996 r=8.1
                        fill="none" stroke=#9e9e9e stroke-width="1.5" opacity="0.7" /></g>"
`;

exports[`renderFurniture reactive glyphs (active variant) > fireplace idle markup is pinned 1`] = `
"<g transform="translate(0 0) rotate(0)"><rect x=-30 y=-10 width=60 height=20 rx="4"
                  fill=#9e9e9e fill-opacity=0.12 stroke=#9e9e9e stroke-width="2" />
        <line x1=-15.600000000000001 y1=-10 x2=-15.600000000000001 y2=10
              stroke=#9e9e9e stroke-width="2" />
        <line x1=15.600000000000001 y1=-10 x2=15.600000000000001 y2=10
              stroke=#9e9e9e stroke-width="2" />
        <path d="M -8.4 3.5999999999999996 L -3 -3.5999999999999996 L 0 0.4 L 3 -3.5999999999999996 L 8.4 3.5999999999999996"
              fill="none" stroke=#9e9e9e stroke-width="1.5" opacity="0.8" /></g>"
`;

exports[`renderFurniture reactive glyphs (active variant) > tv idle markup is pinned 1`] = `
"<g transform="translate(0 0) rotate(0)"><rect x=-25 y=-10 width=50 height=20 rx="4"
                  fill=#9e9e9e fill-opacity=0.12 stroke=#9e9e9e stroke-width="2" /><line x1=-9 y1=10 x2=9 y2=30
                         stroke=#9e9e9e stroke-width="2" /></g>"
`;

exports[`renderFurniture stateStyles tint (smart furniture) > with no resolved style, the markup is pinned to a snapshot (idle byte-identity guard) 1`] = `
"<g transform="translate(120 80) rotate(0)"><rect x=-30 y=-30 width=60 height=60 rx="4"
                  fill=#9e9e9e fill-opacity=0.12 stroke=#9e9e9e stroke-width="2" />
        <line x1=-26.4 y1=-19.200000000000003 x2=26.4 y2=-19.200000000000003
              stroke=#9e9e9e stroke-width="1.5" opacity="0.7" />
        <circle cx="0" cy=3.5999999999999996 r=18 fill="none" stroke=#9e9e9e stroke-width="2" />
        <circle cx=-20.4 cy=-24.6 r=2.6999999999999997
                        fill="none" stroke=#9e9e9e stroke-width="1.5" /></g>"
`;
